fix x overflow in dnd_homebrew and form in contact_me

--- a/sass/pages/_contact_me.scss
+++ b/sass/pages/_contact_me.scss
@@ -27,7 +27,7 @@
     }
 }
 
-@media screen and (max-width: 821px){
+@media screen and (max-width: 1000px){
 
     /*Contact_me*/
     .contactPage{
